--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -24,10 +24,11 @@ monthFormat: "2006-01"
 dateFormat: "2006-01-02"
 timeFormat: "2006-01-02 15:04:05"
 
+favicon: favicon.ico
 author: deroise2306
 email: bruh hell nah
-description: "iloveu"
-subtitle: iloveu
+description: "Lovely nigga"
+subtitle: " "
 
 banner: "images/banner.webp"
 # You can also write it in the form of the following url
